DevTools: fix DataGrid column alignment.
center/right alignment was lost in haste between revert and reland of
https://codereview.chromium.org/288973004/

BUG=372246

Review URL: https://codereview.chromium.org/293623002

git-svn-id: svn://svn.chromium.org/blink/trunk@174350 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/dataGrid.css
+++ b/front_end/dataGrid.css
@@ -133,11 +133,11 @@
     text-overflow: clip;
 }
 
-.data-grid .center div {
+.data-grid .center {
     text-align: center;
 }
 
-.data-grid .right div {
+.data-grid .right {
     text-align: right;
 }
 
